--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/iconify/3.1.1/iconify.min.js"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      crossorigin="anonymous"
     />
   </head>
   <body>
@@ -42,10 +43,11 @@
     <section id="about">
       <h2>About Me</h2>
       <div class="about_section">
-        <img
+        <!-- <img
           src="https://images.pexels.com/photos/10486111/pexels-photo-10486111.jpeg?auto=compress&cs=tinysrgb&w=600"
           alt=""
-        />
+        /> -->
+        <img src="./20240221_161515.jpg" alt="" />
         <p>
           Hi there! I'm <b>Anisiuba Mmesoma</b>, a software engineering student
           with a deep love for crafting digital solutions that make a
@@ -144,21 +146,40 @@
       </div>
     </section>
 
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>This is a placeholder text for contact information.</p>
+    <section id="contact" class="contact-section">
+      <div class="contact-container">
+        <h2>Contact Me</h2>
+        <p>
+          Feel free to reach out to me using the form below or through the
+          contact information provided.
+        </p>
+        <form class="contact-form">
+          <input type="text" placeholder="Your Name" required />
+          <input type="email" placeholder="Your Email" required />
+          <textarea placeholder="Your Message" rows="5" required></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+        <div class="contact-info">
+          <p>Email: anisiubammesoma8@gmail.com</p>
+          <p>Phone: +1234567890</p>
+        </div>
+      </div>
     </section>
 
     <footer>
       <ul class="social-icons">
         <li>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/mmesoma-anisiuba-8b3a69257/"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Mmeso1/"><i class="fab fa-github"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://twitter.com/Oma_Szn"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </li>
       </ul>
     </footer>
