--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           src="https://images.pexels.com/photos/10486111/pexels-photo-10486111.jpeg?auto=compress&cs=tinysrgb&w=600"
           alt=""
         /> -->
-        <img src="./20240221_161515.jpg" alt="" />
+        <img src="./Author.jpg" alt="" />
         <p>
           Hi there! I'm <b>Anisiuba Mmesoma</b>, a software engineering student
           with a deep love for crafting digital solutions that make a
