--- a/index.html
+++ b/index.html
@@ -213,6 +213,23 @@
           }
         })
       }
+
+      document.addEventListener('DOMContentLoaded', function () {
+        const navbar = document.querySelector('.navbar')
+        const hamburgerMenu = document.querySelector('.hamburger-menu')
+        const navLinks = document.querySelector('.nav-links')
+
+        hamburgerMenu.addEventListener('click', function () {
+          navLinks.classList.toggle('active')
+          hamburgerMenu.querySelectorAll('.line').forEach((line) => {
+            line.classList.toggle('open')
+          })
+        })
+
+        navLinks.addEventListener('click', function () {
+          navLinks.classList.toggle('active')
+        })
+      })
     </script>
   </body>
 </html>
