Added 2 more proh==jects

--- a/index.html
+++ b/index.html
@@ -140,6 +140,22 @@
           class="project-card"
           target="_blank"
         >
+          <img src="./Miramar.png" alt="Project 2" />
+          <h3>Hotel Miramar</h3>
+        </a>
+        <a
+          href="https://github.com/yienor_blog"
+          class="project-card"
+          target="_blank"
+        >
+          <img src="./Booklib.png" alt="Project 2" />
+          <h3>BookLib</h3>
+        </a>
+        <a
+          href="https://github.com/yienor_blog"
+          class="project-card"
+          target="_blank"
+        >
           <img src="./Yienor's_Admin.png" alt="Project 2" />
           <h3>Yienor's Blog Admin</h3>
         </a>
